force-app/main/default/objects/C360_ProductSalesArea__c.object
<CustomObject>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <description>Distribution Channel</description>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarkForDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <description>Plant</description>
        <label>Plant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product Name</description>
        <label>Product Name</label>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Product Sales Area</relationshipLabel>
        <relationshipName>Product_Sales_Area</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <description>Sales Organization</description>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <label>Product Sales Area</label>
    <nameField>
        <label>Product Sales Area Nunber</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>